--- a/src/js/components/pages/recipes/recipes.css
+++ b/src/js/components/pages/recipes/recipes.css
@@ -1,3 +1,8 @@
+@page {
+  size: a4 portrait;
+  margin: 2em;
+}
+
 #filter-form {
   padding-bottom: 1em; }
 
@@ -31,6 +36,10 @@
   border-radius: 1em;
   border-top-left-radius: 0;
   padding: 1em; }
+
+.recipe-ingredients td {
+  padding-right: 1em;
+}
 
 @media (min-width: 768px) {
   .recipe-title {
